# sycl-example

./: .gitignore  README.md
.github/workflows/: build_and_run.yml
cpp/: CMakeLists.txt  main.cpp
environments/: conda-win-sycl.yml
python/: CMakeLists.txt  setup.py
python/hello/: _hello.cxx
